--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ color:#f97822;
         content:"Hola";
     }
     76%, 100%{
-        content:"Bonjour";
+        content:"Ciao";
     }
 }
 @media (max-width: 1000px){
