--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ color:#f97822;
         content:"Hola";
     }
     76%, 100%{
-        content:"Ciao";
+        content:"ಹಲೋ";
     }
 }
 @media (max-width: 1000px){
